# 2022-CAU-Rust-GameProgramming

./: README.md
2 - Code/flappybird-rs/: Cargo.toml  README.md
2 - Code/flappybird-rs/src/: main.rs
